main/default/objects/pharos__Log__c/fields/pharos__Apex_Name__c.field-meta.xml
<CustomField>
    <fullName>pharos__Apex_Name__c</fullName>
    <label>Operation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>