main/default/objects/pharos__Log__c/fields/pharos__Async_Job_Name__c.field-meta.xml
<CustomField>
    <fullName>pharos__Async_Job_Name__c</fullName>
    <label>Async Job Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>