main/default/objects/pharos__Log__c/fields/pharos__Audit_Trail_available__c.field-meta.xml
<CustomField>
    <fullName>pharos__Audit_Trail_available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Audit Trail available</label>
    <type>Checkbox</type>
</CustomField>