main/default/objects/pharos__Log__c/fields/pharos__Broadcast_Status__c.field-meta.xml
<CustomField>
    <fullName>pharos__Broadcast_Status__c</fullName>
    <label>Broadcast Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>