main/default/objects/pharos__Log__c/fields/pharos__Bug_Tracker__c.field-meta.xml
<CustomField>
    <fullName>pharos__Bug_Tracker__c</fullName>
    <description>Link to this issue in an external bug tracker application</description>
    <inlineHelpText>Link to this issue in an external bug tracker application</inlineHelpText>
    <label>Bug Tracker</label>
    <type>Url</type>
</CustomField>