main/default/objects/pharos__Log__c/fields/pharos__Created_At__c.field-meta.xml
<CustomField>
    <fullName>pharos__Created_At__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Created At</label>
    <type>DateTime</type>
</CustomField>