main/default/objects/pharos__Log__c/fields/pharos__Created_At_New__c.field-meta.xml
<CustomField>
    <fullName>pharos__Created_At_New__c</fullName>
    <label>Created At New</label>
    <type>DateTime</type>
</CustomField>