main/default/objects/pharos__Log__c/fields/pharos__Created_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>pharos__Created_Timestamp__c</fullName>
    <label>Created Timestamp</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>