main/default/objects/pharos__Log__c/fields/pharos__Deploy_Results__c.field-meta.xml
<CustomField>
    <fullName>pharos__Deploy_Results__c</fullName>
    <label>Deploy Results</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>