main/default/objects/pharos__Log__c/fields/pharos__Deploy_results_available__c.field-meta.xml
<CustomField>
    <fullName>pharos__Deploy_results_available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deploy results available</label>
    <type>Checkbox</type>
</CustomField>