main/default/objects/pharos__Log__c/fields/pharos__Details__c.field-meta.xml
<CustomField>
    <fullName>pharos__Details__c</fullName>
    <label>Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>