main/default/objects/pharos__Log__c/fields/pharos__Do_Not_Create_Issue__c.field-meta.xml
<CustomField>
    <fullName>pharos__Do_Not_Create_Issue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Create Issue</label>
    <type>Checkbox</type>
</CustomField>