main/default/objects/pharos__Log__c/fields/pharos__Duration__c.field-meta.xml
<CustomField>
    <fullName>pharos__Duration__c</fullName>
    <label>Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>