main/default/objects/pharos__Log__c/fields/pharos__External_Id__c.field-meta.xml
<CustomField>
    <fullName>pharos__External_Id__c</fullName>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>