main/default/objects/pharos__Log__c/fields/pharos__Flow_API_Name__c.field-meta.xml
<CustomField>
    <fullName>pharos__Flow_API_Name__c</fullName>
    <label>Flow API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>