main/default/objects/pharos__Log__c/fields/pharos__Flow_Link__c.field-meta.xml
<CustomField>
    <fullName>pharos__Flow_Link__c</fullName>
    <formula>HYPERLINK(pharos__Organization_Url__c&amp;&apos;/builder_platform_interaction/flowBuilder.app?isFromAloha=true&amp;flowId=&apos;&amp;pharos__Flow_Version_Id__c, pharos__Flow_API_Name__c,&quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flow Link</label>
    <type>Text</type>
</CustomField>