main/default/objects/pharos__Log__c/fields/pharos__Flow_Version_Id__c.field-meta.xml
<CustomField>
    <fullName>pharos__Flow_Version_Id__c</fullName>
    <label>Flow Version Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>