main/default/objects/pharos__Log__c/fields/pharos__Hash_3__c.field-meta.xml
<CustomField>
    <fullName>pharos__Hash_3__c</fullName>
    <label>Hash 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>