main/default/objects/pharos__Log__c/fields/pharos__Installed_Packages__c.field-meta.xml
<CustomField>
    <fullName>pharos__Installed_Packages__c</fullName>
    <label>Installed Packages</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>