main/default/objects/pharos__Log__c/fields/pharos__Interview_GUID_External__c.field-meta.xml
<CustomField>
    <fullName>pharos__Interview_GUID_External__c</fullName>
    <externalId>true</externalId>
    <label>Interview GUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>