main/default/objects/pharos__Log__c/fields/pharos__Is_New__c.field-meta.xml
<CustomField>
    <fullName>pharos__Is_New__c</fullName>
    <description>True if this is the first occurrence of this error</description>
    <formula>pharos__First_Occurred_On__c == pharos__Created_At__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>True if this is the first occurrence of this error</inlineHelpText>
    <label>Is New</label>
    <type>Checkbox</type>
</CustomField>