main/default/objects/pharos__Log__c/fields/pharos__Is_Parent__c.field-meta.xml
<CustomField>
    <fullName>pharos__Is_Parent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Parent</label>
    <type>Checkbox</type>
</CustomField>