main/default/objects/pharos__Log__c/fields/pharos__Is_Sandbox__c.field-meta.xml
<CustomField>
    <fullName>pharos__Is_Sandbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Sandbox</label>
    <type>Checkbox</type>
</CustomField>