main/default/objects/pharos__Log__c/fields/pharos__Issue_Tracker_Status__c.field-meta.xml
<CustomField>
    <fullName>pharos__Issue_Tracker_Status__c</fullName>
    <label>Issue Tracker Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>