main/default/objects/pharos__Log__c/fields/pharos__Namespace__c.field-meta.xml
<CustomField>
    <fullName>pharos__Namespace__c</fullName>
    <label>Namespace</label>
    <length>255</length>
    <type>Text</type>
</CustomField>