main/default/objects/pharos__Log__c/fields/pharos__Notification_Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>pharos__Notification_Integration_Status__c</fullName>
    <label>Notification Integration Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>