main/default/objects/pharos__Log__c/fields/pharos__Organization_Name__c.field-meta.xml
<CustomField>
    <fullName>pharos__Organization_Name__c</fullName>
    <label>Organization Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>