main/default/objects/pharos__Log__c/fields/pharos__Organization_Url__c.field-meta.xml
<CustomField>
    <fullName>pharos__Organization_Url__c</fullName>
    <label>Organization Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>