main/default/objects/pharos__Log__c/fields/pharos__Originated_From__c.field-meta.xml
<CustomField>
    <fullName>pharos__Originated_From__c</fullName>
    <label>Originated From</label>
    <length>255</length>
    <type>Text</type>
</CustomField>