main/default/objects/pharos__Log__c/fields/pharos__PagerDuty_Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>pharos__PagerDuty_Integration_Status__c</fullName>
    <label>PagerDuty Integration Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>