main/default/objects/pharos__Log__c/fields/pharos__Parent__c.field-meta.xml
<CustomField>
    <fullName>pharos__Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>pharos__Log__c</referenceTo>
    <relationshipLabel>Logs</relationshipLabel>
    <relationshipName>Logs</relationshipName>
    <type>Lookup</type>
</CustomField>