main/default/objects/pharos__Log__c/fields/pharos__Pending_Jobs__c.field-meta.xml
<CustomField>
    <fullName>pharos__Pending_Jobs__c</fullName>
    <label>Pending Jobs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>