main/default/objects/pharos__Log__c/fields/pharos__Post_Processing_Complete__c.field-meta.xml
<CustomField>
    <fullName>pharos__Post_Processing_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Post Processing Complete</label>
    <type>Checkbox</type>
</CustomField>