main/default/objects/pharos__Log__c/fields/pharos__Post_Processing_Status__c.field-meta.xml
<CustomField>
    <fullName>pharos__Post_Processing_Status__c</fullName>
    <label>Post Processing Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>