main/default/objects/pharos__Log__c/fields/pharos__Regressed_On__c.field-meta.xml
<CustomField>
    <fullName>pharos__Regressed_On__c</fullName>
    <label>Regressed On</label>
    <type>DateTime</type>
</CustomField>