main/default/objects/pharos__Log__c/fields/pharos__Regression__c.field-meta.xml
<CustomField>
    <fullName>pharos__Regression__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Regression</label>
    <type>Checkbox</type>
</CustomField>