main/default/objects/pharos__Log__c/fields/pharos__Related_Object__c.field-meta.xml
<CustomField>
    <fullName>pharos__Related_Object__c</fullName>
    <formula>IF(NOT(ISBLANK(pharos__Related_Id__c)), pharos__Related_Object_Type__c + &apos;: &apos; + HYPERLINK(pharos__Organization_Url__c&amp;&apos;/&apos;&amp; pharos__Related_Id__c , pharos__Related_Id__c, &apos;_blank&apos;), &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Object</label>
    <type>Text</type>
</CustomField>