main/default/objects/pharos__Log__c/fields/pharos__Related_Object_Type__c.field-meta.xml
<CustomField>
    <fullName>pharos__Related_Object_Type__c</fullName>
    <label>Related Object Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>