main/default/objects/pharos__Log__c/fields/pharos__Related_Objects__c.field-meta.xml
<CustomField>
    <fullName>pharos__Related_Objects__c</fullName>
    <label>Related Objects</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>