main/default/objects/pharos__Log__c/fields/pharos__Request_Id_External__c.field-meta.xml
<CustomField>
    <fullName>pharos__Request_Id_External__c</fullName>
    <externalId>true</externalId>
    <label>Request Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>