main/default/objects/pharos__Log__c/fields/pharos__Role_Id__c.field-meta.xml
<CustomField>
    <fullName>pharos__Role_Id__c</fullName>
    <label>Role Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>