main/default/objects/pharos__Log__c/fields/pharos__Salesforce_Error_Id__c.field-meta.xml
<CustomField>
    <fullName>pharos__Salesforce_Error_Id__c</fullName>
    <label>Salesforce Error Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>