main/default/objects/pharos__Log__c/fields/pharos__Salesforce_License_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>pharos__Salesforce_License_Type_Name__c</fullName>
    <label>Salesforce License Type Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>