main/default/objects/pharos__Log__c/fields/pharos__Sent_To_Splunk__c.field-meta.xml
<CustomField>
    <fullName>pharos__Sent_To_Splunk__c</fullName>
    <label>Sent To Splunk</label>
    <type>DateTime</type>
</CustomField>