main/default/objects/pharos__Log__c/fields/pharos__Setup_Audit_Trail__c.field-meta.xml
<CustomField>
    <fullName>pharos__Setup_Audit_Trail__c</fullName>
    <label>Setup Audit Trail</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>