main/default/objects/pharos__Log__c/fields/pharos__Stack_trace_parse_result_available__c.field-meta.xml
<CustomField>
    <fullName>pharos__Stack_trace_parse_result_available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stack trace parse result available</label>
    <type>Checkbox</type>
</CustomField>