main/default/objects/pharos__Log__c/fields/pharos__Stacktrace__c.field-meta.xml
<CustomField>
    <fullName>pharos__Stacktrace__c</fullName>
    <label>Stacktrace</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>