main/default/objects/pharos__Log__c/fields/pharos__Stacktrace_Parse_Result__c.field-meta.xml
<CustomField>
    <fullName>pharos__Stacktrace_Parse_Result__c</fullName>
    <label>Stacktrace Parse Result</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>