main/default/objects/pharos__Log__c/fields/pharos__Summary__c.field-meta.xml
<CustomField>
    <fullName>pharos__Summary__c</fullName>
    <label>Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>