main/default/objects/pharos__Log__c/fields/pharos__Total_Active_Sessions__c.field-meta.xml
<CustomField>
    <fullName>pharos__Total_Active_Sessions__c</fullName>
    <label>Total Active Sessions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>