main/default/objects/pharos__Log__c/fields/pharos__Total_Pending_Jobs__c.field-meta.xml
<CustomField>
    <fullName>pharos__Total_Pending_Jobs__c</fullName>
    <label>Total Pending Jobs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>