main/default/objects/pharos__Log__c/fields/pharos__Type__c.field-meta.xml
<CustomField>
    <fullName>pharos__Type__c</fullName>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>