main/default/objects/pharos__Log__c/fields/pharos__User__c.field-meta.xml
<CustomField>
    <fullName>pharos__User__c</fullName>
    <formula>HYPERLINK(pharos__Organization_Url__c&amp;&apos;/&apos;&amp;pharos__User_Id__c, pharos__User_Name__c,&quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User</label>
    <type>Text</type>
</CustomField>