main/default/objects/pharos__Log__c/fields/pharos__User_Id__c.field-meta.xml
<CustomField>
    <fullName>pharos__User_Id__c</fullName>
    <label>User Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>