main/default/objects/pharos__Log__c/fields/pharos__User_Name__c.field-meta.xml
<CustomField>
    <fullName>pharos__User_Name__c</fullName>
    <label>User Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>