main/default/objects/pharos__Log__c/fields/pharos__Visualforce_Page__c.field-meta.xml
<CustomField>
    <fullName>pharos__Visualforce_Page__c</fullName>
    <label>Visualforce Page</label>
    <length>255</length>
    <type>Text</type>
</CustomField>