main/default/objects/pharos__Log__c/recordTypes/pharos__Debug.recordType-meta.xml
<RecordType>
    <fullName>pharos__Debug</fullName>
    <active>true</active>
    <label>Debug</label>
</RecordType>