main/default/objects/pharos__Log__c/recordTypes/pharos__Event.recordType-meta.xml
<RecordType>
    <fullName>pharos__Event</fullName>
    <active>true</active>
    <label>Event</label>
</RecordType>