main/default/objects/pharos__Log__c/recordTypes/pharos__Warning.recordType-meta.xml
<RecordType>
    <fullName>pharos__Warning</fullName>
    <active>true</active>
    <label>Warning</label>
</RecordType>