main/default/objects/pharos__Log__c/listViews/pharos__All.listView-meta.xml
<ListView>
    <fullName>pharos__All</fullName>
    <columns>NAME</columns>
    <columns>pharos__Icon__c</columns>
    <columns>pharos__Category__c</columns>
    <columns>pharos__Type__c</columns>
    <columns>pharos__Area__c</columns>
    <columns>pharos__Summary__c</columns>
    <columns>pharos__Is_New__c</columns>
    <columns>pharos__Created_At__c</columns>
    <columns>pharos__First_Occurred_On__c</columns>
    <columns>pharos__User__c</columns>
    <columns>pharos__Related_Object__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>